[package]
name = "amount_conversion"
description = "Convert Amount conversion from lower denomination to higher denomination and vice-versa"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
readme = "README.md"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
