[package]
name = "amount_conversion"
description = "Convert Amount conversion from lower denomination to higher denomination and vice-versa"
version = "0.1.1"
homepage = "https://github.com/jarnura/amount_conversion"
documentation = "https://docs.rs/amount_conversion"
edition = "2021"
rust-version = "1.65"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["amount", "currency", "conversion", "subunit", "payments"]

[dependencies]
once_cell = "1.17.1"
serde = {version = "1.0.152", features=["derive"]}

[dev-dependencies]
serde_json = "1.0.93"
